config/four-colors.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: four-colors
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: four-colors
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: four-colors
spec:
  replicas: 2
  selector:
    matchLabels:
      app: four-colors
  template:
    metadata:
      labels:
        app: four-colors
    spec:
      containers:
      - name: four-colors
        image: <IMAGE>
        ports:
        - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: four-colors-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "www.gokabam.com"
    http:
      paths:
      - pathType: Prefix
        path: "/four-colors"
        backend:
          service:
            name: baby-hexbatch
            port:
              number: 80
