config/hello-kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - gokabam.com
    - www.gokabam.com
    - texdevelopers.com
    - www.texdevelopers.com
    secretName: hello-kubernetes-tls
  rules:
  - host: "gokabam.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: baby-hexbatch
            port:
              number: 80
  - host: "www.gokabam.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: baby-hexbatch
            port:
              number: 80
  - host: "texdevelopers.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-kubernetes-second
            port:
              number: 80
  - host: "www.texdevelopers.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-kubernetes-second
            port:
              number: 80
